--- a/files/style.css
+++ b/files/style.css
@@ -5,7 +5,6 @@
 body {
 font-family: sans-serif;
 display: flex;
-flex-direction: column;
 align-items: center;
 justify-content: center;
 height: 100vh;
@@ -23,13 +22,13 @@ margin: 0;
     background-position: center;
     background-repeat: no-repeat;
     height: 80vh;
-    border-radius: 40px;
+    border-radius: 50px;
     color: aliceblue;
     cursor: pointer;
     flex: 0.5;
     margin: 10px;
     position: relative;
-    transition: flex 0.7s ease-in;
+    transition: flex 1.7s ease-in;
 }
 
 .panel h3 {
@@ -39,6 +38,7 @@ margin: 0;
     left: 20px;
     margin: 0;
     opacity: 0;
+    
 }
 
 .panel.active {
@@ -46,14 +46,16 @@ margin: 0;
 }
 .panel.active h3 {
     opacity: 1;
-    transition: opacity 0.3s ease-in 0.4s;
+    transition: opacity 2s ease-in 0.7s;
 }
 
-@media(max-width: 480px) {
-    .container{
+@media(max-width: 480) {
+    .container {
         width: 100vw;
     }
-    .panel:nth-of-type(4),
+    .panel:nth-of-type(4){
+        display: none;
+    }
     .panel:nth-of-type(5){
         display: none;
     }
